Added redirect and Add Movie button

--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -28,7 +28,11 @@
 				</div>
 			</div>
 		</div>
-	</div>
+		</div>
+		<hr />
+		<div class="row m-3">
+			<a href="/addMovie" class="btn btn-primary btn-lg" >Añadir Película</a>
+		</div>
 	</div>
 </body>
 </html>
