Validando los campos

--- a/src/main/resources/templates/addMovie.html
+++ b/src/main/resources/templates/addMovie.html
@@ -6,7 +6,8 @@
 <body>
 	<form action="#" th:action="@{/actionAddMovie}" th:object="${movie}" method="post">
 		<p>Nombre:<input type="text" th:field="*{name}" /></p>
-		<p>DescripciÃ³n:<input type="text" th:field="*{description}" /></p>
+		<p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Nombre tiene errores</p>
+		<p>Descripción:<input type="text" th:field="*{description}" /></p>
 		<p>Imagen: <input type="text" th:field="*{image}" /></p>
 		<p><input type="submit" value="Enviar" /></p>
 	</form>
